--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0.31"
 rand = "0.8.5"
+sdl2 = { version = "0.35.0", features = ["bundled", "static-link"]}
