--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rustychip"
 version = "0.1.0"
 edition = "2021"
+description = "Rusty Chip is a simple chip-8 emulator written in rust"
+authors = ["Pedro Godinho <pedro.fernandez.godinho@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,3 +11,4 @@ edition = "2021"
 thiserror = "1.0.31"
 rand = "0.8.5"
 sdl2 = { version = "0.35.0", features = ["bundled", "static-link"]}
+clap = { version = "3.2.14", features = ["derive"]}
